[metadata]
name = simpleverse
version = attr: simpleverse.__version__
description = API wrapper for versatileapi in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/simpleverse
author = eggplants
author_email = w10776e8w@yahoo.co.jp
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    prompt-toolkit>=3.0.28
    requests>=2.27.1
    types-requests>=2.27.1
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    simv=simpleverse.main:main

[options.extras_require]
dev =
    black
    flake8
    mypy
    setuptools>=46.4.0
    types-setuptools

[options.package_data]
simpleverse = py.typed

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 88
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
